--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Introduction
+      Ripple
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,9 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Introduction</ion-title>
+      <ion-title size="large">Ripple</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <p>This is an introduction Page</p>
+  <p>Ripple</p>
 </ion-content>
