--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,19 +2,25 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+      <ion-icon name="home-outline"></ion-icon>
+      <ion-label>Introduction</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+      <ion-icon name="logo-bitcoin"></ion-icon>
+      <ion-label>Bitcoin</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+      <ion-icon src="https://upload.wikimedia.org/wikipedia/commons/6/6f/Ethereum-icon-purple.svg"></ion-icon>
+      <ion-label>Etherium</ion-label>
     </ion-tab-button>
-  </ion-tab-bar>
+  
+
+  <ion-tab-button tab="tab4">
+    <ion-icon src="https://cryptologos.cc/logos/versions/dogecoin-doge-logo-alternative.svg"></ion-icon>
+    <ion-label>Dogecoin</ion-label>
+  </ion-tab-button>
+</ion-tab-bar>
 
 </ion-tabs>
