Commit for submission

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -13,5 +13,50 @@
     </ion-toolbar>
   </ion-header>
 
-  <p>This is an introduction Page</p>
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <ion-card href="/tabs/tab2">
+          <img src="https://www.gannett-cdn.com/media/2021/04/03/USATODAY/usatsports/MotleyFool-TMOT-feccc6d4-bitcoin-logo.jpg"/>
+          <ion-item>
+            <ion-icon name="logo-bitcoin" slot="start"></ion-icon>
+            <ion-card-header>
+              <ion-card-title>Bitcoin</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              Bitcoin is a decentralized digital currency, without a central bank or single administrator, that can be sent from user to user on the peer-to-peer bitcoin network without the need for intermediaries.
+            </ion-card-content>
+          </ion-item>
+        </ion-card>
+      </ion-col>
+      <ion-col>
+        <ion-card href="/tabs/tab3">
+          <img src="https://phantom-marca.unidadeditorial.es/59644477365716512f144f6f85f31af9/resize/1320/f/jpg/assets/multimedia/imagenes/2022/03/20/16477692211339.jpg"/>
+          <ion-item>
+            <ion-icon src="https://upload.wikimedia.org/wikipedia/commons/6/6f/Ethereum-icon-purple.svg"></ion-icon>
+            <ion-card-header>
+              <ion-card-title>Ethereum</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              Ethereum is a decentralized, open-source blockchain with smart contract functionality. Ether is the native cryptocurrency of the platform. Among cryptocurrencies, Ether is second only to Bitcoin in market capitalization. Ethereum was conceived in 2013 by programmer Vitalik Buterin.
+            </ion-card-content>
+          </ion-item>
+        </ion-card>
+      </ion-col>
+      <ion-col>
+        <ion-card href="/tabs/tab4">
+          <img src="https://imageio.forbes.com/specials-images/imageserve/6259b04b15e1f27479c1628b/Digital-Cryptocurrencies/960x0.jpg?fit=bounds&format=jpg&width=960"/>
+          <ion-item>
+            <ion-icon src="https://cryptologos.cc/logos/versions/dogecoin-doge-logo-alternative.svg"></ion-icon>
+            <ion-card-header>
+              <ion-card-title>Dogecoin</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              Dogecoin is a cryptocurrency created by software engineers Billy Markus and Jackson Palmer, who decided to create a payment system as a "joke", making fun of the wild speculation in cryptocurrencies at the time.
+            </ion-card-content>
+          </ion-item>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
