--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -13,5 +13,9 @@
     </ion-toolbar>
   </ion-header>
 
-  <p>Ripple</p>
+  <div style="text-align:center">
+    <h1>Currency: {{currentCustomer}}</h1>
+    <div><img alt="item" src="{{currencyIcon}}"></div>
+    <h1>Price In Euro: {{cryptoPrice}}</h1>
+    </div>
 </ion-content>
