--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -13,5 +13,12 @@
     </ion-toolbar>
   </ion-header>
 
-  <p>Bitcoin</p>
+
+
+<!--The code to display images -->
+<div style="text-align:center">
+  <h1>Currency: {{currentCustomer}}</h1>
+  <div><img alt="item" src="{{currencyIcon}}"></div>
+  <h1>Price In Euro: {{cryptoPrice}}</h1>
+  </div>
 </ion-content>
