--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -9,9 +9,13 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
+      <ion-title size="large">Ethereum</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <div style="text-align:center">
+    <h1>Currency: {{currentCustomer}}</h1>
+    <div><img alt="item" src="{{currencyIcon}}"></div>
+    <h1>Price In Euro: {{cryptoPrice}}</h1>
+    </div>
 </ion-content>
