--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -18,8 +18,8 @@
   
 
   <ion-tab-button tab="tab4">
-    <ion-icon src="https://cryptologos.cc/logos/versions/dogecoin-doge-logo-alternative.svg"></ion-icon>
-    <ion-label>Dogecoin</ion-label>
+    <ion-icon src="https://www.logo.wine/a/logo/Binance/Binance-BNB-Icon-Logo.wine.svg"></ion-icon>
+    <ion-label>Binance Coin</ion-label>
   </ion-tab-button>
 </ion-tab-bar>
 
